sql branch 2 upd 2.0